[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"
 
[project]
name = "logtrace-py"
version = "1.0.0"
description = "Python client for the Logtrace API"
requires-python = ">=3.11"
dependencies = []
 
[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
 
[tool.setuptools.packages.find]
where = ["."]
include = ["logtrace_py*"]
 
[tool.pytest.ini_options]
asyncio_mode = "auto"
